# guitar-tui

./: .env.example  .gitignore  BUGS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRICULUM.md  DECISIONS.md  IDEAS.md  LICENSE  Makefile  PERSONAS.md  README.md  ROADMAP.md  SECURITY.md  TASKS.md  demo.tape  pyproject.toml
.claude/: claudify
.claude/hooks/stop/: session-wrap.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: ARCHITECTURE.md  CONTEXT.md  CURRICULUM.md  PLAN.md  REDESIGN.md  ROADMAP.md  pypi_readme.md
docs/models/: METRONOME.md
docs/reviews/: 2026-03-07_reviewer_assessment.md  2026-03-18_reviewer_assessment.md  2026-07-11_reviewer_assessment.md  2026-07-12_reviewer_assessment.md
guitar_tui/: __init__.py  app.py  settings.py
guitar_tui/content/: index.yaml
guitar_tui/content/exercises/: alternate_picking.md  barre_strength.md  chord_melody_intro.md  chromatic_warmup.md  major_scale_sequences.md  one_peak_drill.md  (+18 more)
guitar_tui/data/: progressions.yaml  tunings.yaml
guitar_tui/engine/: __init__.py  chord_renderer.py  dispatcher.py  fretboard_renderer.py  models.py  scale_renderer.py  tab_renderer.py
guitar_tui/loaders/: __init__.py  data_loader.py  lesson_loader.py  lick_loader.py  models.py
guitar_tui/theory/: __init__.py  keys.py  web.py
guitar_tui/ui/: __init__.py  app.tcss  styles.py
project/: BACKLOG.md  BUGS.md  CURRICULUM.md  DEPLOYMENT.md  IDEAS.md  PERSONAS.md  REDESIGN.md  ROADMAP.md  TASKS.md
project/reviews/: 2026-03-05_reviewer_assessment.md  2026-03-11_reviewer_assessment.md
schemas/: diagram_spec.md  diagram_taxonomy.md  lesson_format.md  progression_format.md
tests/: test_app.py  test_content_verification.py  test_data_loader.py  test_engine_chord.py  test_engine_dispatcher.py  test_engine_fretboard.py  test_engine_scale.py  test_engine_tab.py  test_lesson_loader.py  test_lick_loader.py  test_placeholder.py  test_practice_worksheet.py  test_settings.py  test_theory_keys.py  test_theory_web.py  test_tools_chord_view.py  test_tools_key_view.py  test_tools_reference_panels.py  test_tools_song_analysis.py
(+187 files in other folders)
