[project]
name = "guitar-tui"
version = "0.3.0"
description = "A TUI application for guitar music theory"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Erikton Konomi"}]
keywords = ["guitar", "music-theory", "tui", "textual", "terminal", "chords", "scales", "fretboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Multimedia :: Sound/Audio",
]
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "pydantic>=2.0",
    "platformdirs>=4.0",
]

[project.urls]
Repository = "https://github.com/konoerik/guitar-tui"
Issues = "https://github.com/konoerik/guitar-tui/issues"

[project.scripts]
guitar-tui = "guitar_tui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "textual-dev>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
